# SentinelClarity-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  SESSIONS.md  SUBMISSION.md  sentinel.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  sbom.yml  security.yml  sentinel-clarity.yml  simnet.yml
artifacts/: demo-output.json  demo-output.md  fix-plan.md  sentinel-results.sarif
artifacts/screenshots/: README.md
audit-simnet/: .gitignore  Clarinet.toml  package-lock.json  package.json  vitest.config.js
audit-simnet/contracts/: authorization-vault.clar  unsafe-authorization-vault.clar
audit-simnet/settings/: Devnet.toml
audit-simnet/tests/: authorization-vault.test.ts
docs/: architecture.md  audit-roadmap.md  demo-script.md  security-testing.md  threat-model.md
docs/adr/: 0001-architecture.md
docs/rules/: README.md  SC-ACCESS.md  SC-OVERFLOW.md  SC-READONLY.md  SC-REENTRANCY.md  SC-TRAIT.md  SC-TX-SENDER.md  SC-UNCHECKED.md
scripts/: audit-check.sh  demo.sh  generate-sbom.ps1  judge-demo.sh  security-check.sh
sentinel-action/: Cargo.toml  action.yml
sentinel-action/src/: lib.rs
sentinel-ai/: Cargo.toml
sentinel-ai/src/: lib.rs
sentinel-clarity/: Cargo.toml
sentinel-clarity/src/: lib.rs
sentinel-cli/: Cargo.toml
sentinel-cli/src/: main.rs
sentinel-core/: Cargo.toml
sentinel-core/src/: ast.rs  lib.rs  sarif.rs  traits.rs
sentinel-engine/: Cargo.toml
sentinel-engine/src/: lib.rs  rules.rs
sentinel-test-corpus/: Cargo.toml
(+21 files in other folders)
