[workspace]
resolver = "2"
members = [
    "sentinel-core",
    "sentinel-clarity",
    "sentinel-engine",
    "sentinel-ai",
    "sentinel-cli",
    "sentinel-action",
    "sentinel-test-corpus",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/sujan/sentinel-clarity"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
glob = "0.3"
octocrab = "0.39"
openai-api-rs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tree-sitter = "0.22"
walkdir = "2"

sentinel-ai = { path = "sentinel-ai" }
sentinel-clarity = { path = "sentinel-clarity" }
sentinel-core = { path = "sentinel-core" }
sentinel-engine = { path = "sentinel-engine" }
