[package]
name = "sentinel-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sentinel-clarity"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
sentinel-ai.workspace = true
sentinel-clarity.workspace = true
sentinel-core.workspace = true
sentinel-engine.workspace = true
serde_json.workspace = true
walkdir.workspace = true
